# spikeorama

./: .gitignore  README.md
spikes/django-shutdown-hooks/slowproject/: envrc.example  manage.py  pyproject.toml
spikes/django-shutdown-hooks/slowproject/slowproject/: settings.py  urls.py  wsgi.py
spikes/opt-in-outbox-headers/: docker-compose.yml  envrc.example
spikes/opt-in-outbox-headers/fastproject/: envrc.example  manage.py  pyproject.toml
spikes/opt-in-outbox-headers/fastproject/fastproject/: asgi.py  settings.py  urls.py  wsgi.py
spikes/opt-in-outbox-headers/slowproject/: pyproject.toml
spikes/opt-in-outbox-headers/slowproject/slowproject/: asgi.py  settings.py
spikes/rt-cdc-to-fact-enrichment/: .gitignore  LOGBOOK.md  README.md  docker-compose.yml
spikes/rt-cdc-to-fact-enrichment/opt/abstractfactory/: .gitignore  build.gradle.kts  settings.gradle.kts
spikes/rt-cdc-to-fact-enrichment/opt/abstractfactory/src/main/proto/: primary.proto
spikes/rt-cdc-to-fact-enrichment/opt/abstractfactory/src/main/resources/: facts.yml
spikes/rt-cdc-to-fact-enrichment/opt/monolith/: pyproject.toml
spikes/rt-cdc-to-fact-enrichment/opt/monolith/monolith/: settings.py  urls.py
spikes/rt-cdc-to-fact-enrichment/opt/monolith/wildapp/: apps.py  models.py
spikes/rt-cdc-to-fact-enrichment/opt/monolith/wildapp/migrations/: 0001_initial.py
spikes/rt-cdc-to-fact-enrichment/src/main/dbz/: cdc-connector.json  outbox-publisher.json
spikes/rt-cdc-to-fact-enrichment/src/main/sql/: outbox.ddl
(+15 files in other folders)
