[tool.poetry]
name = "monolith"
version = "0.1.0"
description = ""
authors = ["Adam Strickland <adam.strickland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
Django = "^4.2"
faker = "^18.4.0"
django-environ = "^0.10.0"
psycopg2 = "^2.9.5"
django-seed = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
